<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EEEC"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars"
                app:srcCompat="@drawable/top_background2"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_naccount"
                android:textColor="#3B608C"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:layout_marginLeft="32dp"
                tools:layout_marginRight="32dp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/name"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/name"
                android:textColor="#756C6C"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHint="#756C6C"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/email"
                android:textColor="#756C6C"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHint="#756C6C"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:textColor="#756C6C"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="#756C6C"
                android:autofillHints="" />
    <!-- Add a Button for registration -->
            <ImageView
                android:id="@+id/buttonRegister"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                tools:src="@tools:sample/avatars"
                app:srcCompat="@drawable/btn_arraw1"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/trylogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/forget_your_password_recovery_it"
                android:textAlignment="center"
                android:textColor="#3B608C"
                android:textSize="16sp"
                android:textStyle="bold" />
</LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
