<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EEEC"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/avatars"
                    app:srcCompat="@drawable/top_background1"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_nback"
                    android:textColor="#EA6D35"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    tools:layout_marginLeft="32dp"
                    tools:layout_marginRight="32dp" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:textColor="#756C6C"
                    android:hint="@string/Email"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:textColorHint="#756C6C"
                    android:autofillHints=""
                    tools:ignore="TextFields" />


                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:textColor="#756C6C"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColorHint="#756C6C"
                    android:autofillHints="" />

                <ImageView
                    android:id="@+id/buttonLogin"
                    android:layout_width="64dp"
                android:layout_height="64dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    tools:src="@tools:sample/avatars"
                    app:srcCompat="@drawable/btn_arraw1"
                    android:contentDescription="@string/todo" />

    <!-- Add a Button for registration -->

                <TextView
                    android:id="@+id/txtRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_new_user_register"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#3B608C"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
